<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to the experiment. Do not press the HOME button for the duration of the experiment.\n\nThis is a change detection task. You will see an image of several colored squares. Once you press the "Press to go on" button, the first image will be replaced with the 2nd image after a short period. The 2nd image will be the same as the 1st image except that sometimes one of the squares will change in color. Press the YES button if there is such a change, and press the NO button if there is no change. You will receive feedback on whether your judgement is correct or incorrect. Try to be as accurate as possible.\nAfter the feedback, the next trial will start immediately. There will be 100 such trials broken into two blocks. You can take a break after the first block.\n\nEnter your Amazon Turk id below.</string>
    <string name="app_name">PictureChoice</string>
    <string name="block_title">Block #:</string>
    <string name="break_title">Break screen</string>
    <string name="choice_title">Choosing screen</string>
    <string name="choice1_label">Yes</string>
    <string name="choice2_label">No</string>
    <string name="break_msg">Take a break</string>
    <string name="main_button_label">Press to start game</string>
    <string name="block_button_label">Press to start the block</string>
    <string name="break_button_label">Press to go to next block</string>
    <string name="pic_label">Experimental Picture</string>
    <string name="pic_button_label">Press to go on</string>
    <string name="mask_label">Mask</string>
    <string name="temp_label">0</string>
    <string name="ready_label">Ready?</string>

</resources>
