<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/choice1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/choice1_label"
            android:visibility="invisible" />

        <Button
            android:id="@+id/choice2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/choice2_label"
            android:visibility="invisible" />
    </LinearLayout>

    <ImageView
        android:id="@+id/picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pic_label"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/mask"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/mask_label"
        android:src="@drawable/ic_launcher"
        android:visibility="invisible" />

</FrameLayout>