<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#8c1515"
    android:orientation="vertical"
    android:keepScreenOn="true" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#ddcf99"
        android:textSize="40dp"
        android:text="@string/block_title" />

	<Button
	    android:id="@+id/button_to_choice"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
	    android:layout_centerHorizontal="true"
	    android:text="@string/block_button_label" />

	<TextView
	    android:id="@+id/blockNumView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:textColor="#ddcf99"
	    android:layout_centerInParent="true"
	    android:text="@string/temp_label"
	    android:textSize="50dp" />

</RelativeLayout>